Fix CSS grid gaps not displaying on Edge issue and other minor grid related issues (#413)
* Put -ms prefix version first in @display-grid which puts grid gaps back in Edge; remove redundant call to @display-grid in _builder .main-page-layout

* Tweak homepage horizontal card image so the grid gap displays in IE on homepage

* Set autoprefixer to handle CSS grid which fixes the grid Blastila layout in IE (uses grid-template-areas which needs autoprefixer)

--- a/kss/builder/decanter/scss/_home.scss
+++ b/kss/builder/decanter/scss/_home.scss
@@ -75,11 +75,6 @@
       @include centered-column;
       box-shadow: none;
       border: 0;
-      > img {
-        display: block;
-        margin-left: 0;
-        margin-right: 0;
-      }
     }
 
     p {
